Resolves: tdf#132626 entry_insert_text works on the newly typed region

but in this case we want to work on the whole entry string to see
if it forms a legal result

Change-Id: I818c7d6b8efc53d00a7ea68b2e1e0ad386ed0b20