sw/source/uibase/inc/cption.hxx
@@ -64,7 +64,6 @@ class SwCaptionDialog : public SfxDialogController
     DECL_LINK(ModifyComboHdl, weld::ComboBox&, void);
     DECL_LINK(OptionHdl, weld::Button&, void);
     DECL_LINK(CaptionHdl, weld::Button&, void);
-    DECL_LINK(TextFilterHdl, OUString&, bool);
 
     void Apply();
 
